# phone-mirror

./: .gitignore  README.md  index.html  package-lock.json  package.json  setup.ps1  setup.sh  vite.config.ts
.hermes/plans/: 2026-06-16_120000-phone-mirror-app.md
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  server.rs  state.rs
src-tauri/src/adb/: device.rs  input.rs  mod.rs
src-tauri/src/protocol/: mod.rs
src-tauri/src/video/: decoder.rs  mod.rs  recorder.rs  stream.rs
src/components/: ControlPanel.tsx  Device.tsx  ScreenMirror.tsx  index.ts  types.ts
src/hooks/: index.ts  useDevices.ts  useMirror.ts
